deployments/dev/files-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: files
  labels:
    app: files
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: files
            - name: MYSQL_HOST
              value: external-mysql.default.svc
            - name: MYSQL_PORT
              value: "3306"
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: root
            - name: RPC_AUTHENTICATION_HOST
              value: authentication-twirp
            - name: FS_ENDPOINT
              value: $FS_ENDPOINT
            - name: SPACES_ACCESS_KEY
              value: $SPACES_ACCESS_KEY
            - name: SPACES_SECRET_KEY
              value: $SPACES_SECRET_KEY
            - name: DO_ACCESS_TOKEN
              value: $DO_ACCESS_TOKEN
            - name: GCS_ACCESS_KEY
              value: $GCS_ACCESS_KEY
            - name: GCS_SECRET_KEY
              value: $GCS_SECRET_KEY
          image: pepeunlimited/files:0.1.7.2
          name: files
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
